Fix notebook title styles

--- a/src/stylesheets/interface.scss
+++ b/src/stylesheets/interface.scss
@@ -271,6 +271,11 @@
   opacity: .82;
 }
 
+@media only screen and (min-width: 520px) and (max-width: 840px) {
+  
+}
+
+
 @media only screen and (min-width: 840px) {
   .app-container {
     padding-top: 2em;
