--- a/src/stylesheets/interface.scss
+++ b/src/stylesheets/interface.scss
@@ -314,9 +314,9 @@
 
   .collaborators {
     position: absolute;
-    right: -3.2em; /* needs to be width of avatar */
+    right: -46px; /* needs to be width of avatar */
     top: 0;
-    width: 3em;
+    width: 30px;
   }
 
   .collaborators li {
