--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -389,7 +389,13 @@ div.ace-content {
 }
 
 
-@media only screen and (min-width: 520px) and (max-width: 840px) {}
+@media only screen and (min-width: 520px) {
+  .notebook:not([id^='overlay']) {
+    margin: 0 64px;
+    width: calc(100% - 124px);
+  }
+
+}
 
 
 @media only screen and (min-width: 840px) {}
