RIP helvetica condensed

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -31,7 +31,7 @@ $code-highlight-brown: transparentize($highlight-brown, 1 - $CODE-ALPHA);
 // Typography
 $serif: 'Lusitana', 'Palatino', 'Palatino Linotype', serif;
 $sans-serif_notebook: Lato, sans-serif;
-$sans-serif_interface: "HelveticaNeue-CondensedBlack", "Helvetica Neue", Impact, sans-serif; // http://codepen.io/remino/pen/bkGDy
+$sans-serif_interface: "Helvetica Neue", sans-serif;
 $monospace: Hack, Monaco, 'Lucida Console', monospace;
 
 $light: 300;
