--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -81,20 +81,21 @@ img[data-livebook-placeholder-cell] {
   border-bottom: .08em solid rgba(0,0,0,0.125);
   font-size: 2.5em;
   line-height: 1.2;
-  margin-bottom: .5rem;
+  margin-bottom: .4rem;
   letter-spacing: -.06rem;
 }
 
 .notebook h2 {
   font-size: 2em;
   letter-spacing: -.01rem;
+  line-height: 1.25;
   margin-bottom: .6rem;
 }
 
 .notebook p {
   font-size: 1.08em;
   line-height: 1.55;
-  margin: .6rem 0;
+  margin: .75rem 0;
   text-align: justify;
 }
 
