Fix dbl table border (#81)

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -192,6 +192,7 @@ img[data-livebook-placeholder-cell] {
 
 .notebook th {
   background: #f8f8f8;
+  border-top: none;
   font-size: .85em;
   padding: .55em .9em;
 }
