--- a/src/stylesheets/interface.scss
+++ b/src/stylesheets/interface.scss
@@ -196,7 +196,6 @@
     box-shadow: inset 0 0 0 1px #A8A8A8;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    padding: .3em .5em .4em;
   }
 }
 
@@ -316,11 +315,11 @@
   .collaborators li {
     float: none;
     margin: 0;
-    padding: 0;
+    padding: 2px 4px 3px;
   }
 
   .collaborators-name-change-form::after {
-    width: 44px;
+    width: 36px;
   }
 
   .app-container {
