--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -274,13 +274,13 @@ img[data-livebook-placeholder-cell] {
 
 // These properties form an overlay that sits on top of the results box when the cell is "under construction"
 .pyresult-under-construction::after {
-  // background: #fff;
-  // content: "";
-  // height: 100%;
-  // opacity: .65;
-  // position: absolute;
-  // top: 0; left: 0;
-  // width: 100%;
+   background: #fff;
+   content: "";
+   height: 100%;
+   opacity: .65;
+   position: absolute;
+   top: 0; left: 0;
+   width: 100%;
 }
 
 .active-code-cell {
